--- a/Properties/launchSettings.json
+++ b/Properties/launchSettings.json
@@ -4,7 +4,7 @@
     "anonymousAuthentication": true,
     "iisExpress": {
       "applicationUrl": "http://localhost:7340",
-      "sslPort": 44309
+      //"sslPort": 44309
     }
   },
   "profiles": {
