--- a/Properties/launchSettings.json
+++ b/Properties/launchSettings.json
@@ -3,7 +3,7 @@
     "windowsAuthentication": false,
     "anonymousAuthentication": true,
     "iisExpress": {
-      "applicationUrl": "http://localhost:7340",
+      "applicationUrl": "http://localhost:7340"
       //"sslPort": 44309
     }
   },
