--- a/appsettings.json
+++ b/appsettings.json
@@ -8,6 +8,6 @@
   },
   "AllowedHosts": "*",
   "ConnectionStrings": {
-    "MvcMovieContext": "Server=(localdb)\\mssqllocaldb;Database=MvcMovieContext-1;Trusted_Connection=True;MultipleActiveResultSets=true"
+    "MvcMagnetContext": "Server=(localdb)\\mssqllocaldb;Database=MvcMagnetContext-2;Trusted_Connection=True;MultipleActiveResultSets=true"
   }
 }
